--- a/lmy-live-user-provider/src/main/resources/application.yml
+++ b/lmy-live-user-provider/src/main/resources/application.yml
@@ -2,12 +2,12 @@ spring:
   application:
     name: lmy-live-user-provider
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    #driver-class-name: org.apache.shardingsphere.driver.ShardingSphereDriver
-    url: jdbc:mysql://192.168.3.24:8808/lmy_live_user?useUnicode=true&characterEncoding=utf8&allowPublicKeyRetrieval=true
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+    driver-class-name: org.apache.shardingsphere.driver.ShardingSphereDriver
+#    url: jdbc:mysql://192.168.3.24:8808/lmy_live_user?useUnicode=true&characterEncoding=utf8&allowPublicKeyRetrieval=true
     username: root
     password: root
-    #url: jdbc:shardingsphere:classpath:lmy-db-sharding.yaml
+    url: jdbc:shardingsphere:classpath:lmy-db-sharding.yaml
     hikari:
       pool-name: lmy-user-pool
       minimum-idle: 150
