--- a/lmy-live-user-provider/docker/Dockerfile
+++ b/lmy-live-user-provider/docker/Dockerfile
@@ -1,5 +1,7 @@
 FROM openjdk:17-jdk-alpine
 VOLUME /tmp
+COPY /arthas-boot.jar /opts/arthas-boot.jar
+COPY /math-game.jar /opts/math-game.jar
 ADD lmy-live-user-provider-docker.jar app.jar
 ENV JAVA_OPTS="\
 -server \
