--- a/lmy-live-user-provider/src/main/resources/bootstrap.yml
+++ b/lmy-live-user-provider/src/main/resources/bootstrap.yml
@@ -1,3 +1,20 @@
 spring:
-  application:
-    name: lmy-live-user-provider
+  cloud:
+    nacos:
+      username: lmy
+      password: lmy
+      discovery:
+        server-addr: 192.168.3.24:8848
+        namespace: lmy-live-test
+      config:
+        import-check:
+          enabled: false
+        # 当前服务启动后去 nacos 中读取配置文件的后缀
+        file-extension: yaml
+        # 读取配置的 nacos 地址
+        server-addr: 192.168.3.24:8848
+        # 读取配置的 nacos 的名空间
+        namespace: lmy-live-test
+  config:
+    import:
+      - optional:nacos:lmy-live-user-provider.yaml
