--- a/lmy-live-framework/lmy-live-framework-datasource-starter/pom.xml
+++ b/lmy-live-framework/lmy-live-framework-datasource-starter/pom.xml
@@ -18,5 +18,15 @@
             <artifactId>slf4j-api</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>shardingsphere-jdbc-core</artifactId>
+            <version>5.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.nacos</groupId>
+            <artifactId>nacos-client</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
