add docker compose config for api and user provider app

--- a/lmy-live-api/src/main/resources/application.yml
+++ b/lmy-live-api/src/main/resources/application.yml
@@ -1,6 +1,9 @@
-dubbo:
-  application:
-    name: lmy-live-api
-    qos-enable: false
-  registry:
-    address: nacos://192.168.3.24:8848?namespace=lmy-live-test&&username=lmy&&password=lmy
+#dubbo:
+#  application:
+#    name: ${spring.application.name}
+#    qos-enable: false
+#  registry:
+#    address: nacos://192.168.3.24:8848?namespace=lmy-live-test&&username=lmy&&password=lmy
+#server:
+#  servlet:
+#    context-path: /live/api
