--- a/lmy-live-user-provider/src/main/resources/application.yml
+++ b/lmy-live-user-provider/src/main/resources/application.yml
@@ -7,7 +7,7 @@
 ##    url: jdbc:mysql://192.168.3.24:8808/lmy_live_user?useUnicode=true&characterEncoding=utf8&allowPublicKeyRetrieval=true
 #    username: root
 #    password: root
-#    url: jdbc:shardingsphere:classpath:lmy-db-sharding.yaml
+##    url: jdbc:shardingsphere:classpath:lmy-db-sharding.yaml
 #    url: jdbc:shardingsphere:nacos:192.168.3.24:8848:lmy-live-user-shardingjdbc.yaml?username=lmy&&password=lmy&&namespace=lmy-live-test
 #    hikari:
 #      pool-name: lmy-user-pool
