--- a/lmy-live-api/pom.xml
+++ b/lmy-live-api/pom.xml
@@ -41,6 +41,11 @@
             <artifactId>lmy-live-user-interface</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.idea</groupId>
+            <artifactId>lmy-live-common-interface</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>${project.artifactId}-docker</finalName>
