--- a/lmy-live-user-provider/pom.xml
+++ b/lmy-live-user-provider/pom.xml
@@ -16,9 +16,8 @@
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <curator.version>2.12.0</curator.version>
-        <mybatis-plus.version>3.5.3</mybatis-plus.version>
+
         <druid.version>1.1.20</druid.version>
-        <sharding.jdbc.version>5.3.2</sharding.jdbc.version>
         <hessian.version>4.0.38</hessian.version>
         <jetty.version>9.4.28.v20200408</jetty.version>
         <dubbo.version>2.7.8</dubbo.version>
@@ -32,7 +31,7 @@
         <dependency>
             <groupId>org.apache.dubbo</groupId>
             <artifactId>dubbo-spring-boot-starter</artifactId>
-            <version>3.2.0-beta.3</version>
+            <version>${dubbo-spring-boot-starter.version}</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
@@ -45,7 +44,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-bootstrap</artifactId>
-            <version>3.0.2</version>
+            <version>${spring-cloud-starter-bootstrap.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
