--- a/lmy-live-user-provider/src/main/resources/lmy-db-sharding.yaml
+++ b/lmy-live-user-provider/src/main/resources/lmy-db-sharding.yaml
@@ -36,6 +36,12 @@
 #          standard:
 #            shardingColumn: user_id
 #            shardingAlgorithmName: t_user_tag-inline
+#      t_user_phone:
+#        actualDataNodes: user_ds.t_user_phone_${(0..99).collect() {it.toString().padLeft(2,'0')}}
+#        tableStrategy:
+#          standard:
+#            shardingColumn: user_id
+#            shardingAlgorithmName: t_user_phone-inline
 #    shardingAlgorithms:
 #      t_user-inline:
 #        type: INLINE
@@ -45,5 +51,9 @@
 #        type: INLINE
 #        props:
 #          algorithm-expression: t_user_tag_${(user_id %100).toString().padLeft(2,'0')}
+#      t_user_phone-inline:
+#        type: INLINE
+#        props:
+#          algorithm-expression: t_user_phone_${(user_id %100).toString().padLeft(2,'0')}
 #props:
 #  sql-show: true
