--- a/lmy-live-user-provider/src/main/resources/application.yml
+++ b/lmy-live-user-provider/src/main/resources/application.yml
@@ -48,6 +48,7 @@
 #dubbo:
 #  application:
 #    name: ${spring.application.name}
+#    qos-enable: false
 #  registry:
 #    address: nacos://192.168.3.24:8848?namespace=lmy-live-test&&username=lmy&&password=lmy
 #  server: true
