--- a/lmy-live-gateway/src/main/resources/application.yml
+++ b/lmy-live-gateway/src/main/resources/application.yml
@@ -9,3 +9,16 @@
 #          uri: lb://lmy-live-api
 #          predicates:
 #            - Path=/live/api/**
+#dubbo:
+#  application:
+#    name: lmy-live-gateway
+#    qos-enable: false
+#  registry:
+#    address: nacos://192.168.3.24:8848?namespace=lmy-live-test&&username=lmy&&password=lmy
+#  protocol:
+#    name: dubbo
+#    port: 9094
+#lmy:
+#  gateway:
+#    notCheckUrlList:
+#      - /live/api/userLogin
