--- a/lmy-live-api/pom.xml
+++ b/lmy-live-api/pom.xml
@@ -51,7 +51,11 @@
             <artifactId>lmy-live-msg-interface</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.idea</groupId>
+            <artifactId>lmy-live-account-interface</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>${project.artifactId}-docker</finalName>
