--- a/lmy-live-framework/pom.xml
+++ b/lmy-live-framework/pom.xml
@@ -11,5 +11,6 @@
     <modules>
         <module>lmy-live-framework-datasource-starter</module>
         <module>lmy-live-framework-redis-starter</module>
+        <module>lmy-live-framework-web-starter</module>
     </modules>
 </project>
