--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
         <module>lmy-live-msg-provider</module>
         <module>lmy-live-account-interface</module>
         <module>lmy-live-account-provider</module>
+        <module>lmy-live-im-interface</module>
+        <module>lmy-live-im-core-server</module>
     </modules>
     <packaging>pom</packaging>
 
