add 7-18 基于RocketMQ实现IM系统和业务服务的沟通

--- a/lmy-live-framework/pom.xml
+++ b/lmy-live-framework/pom.xml
@@ -12,5 +12,6 @@
         <module>lmy-live-framework-datasource-starter</module>
         <module>lmy-live-framework-redis-starter</module>
         <module>lmy-live-framework-web-starter</module>
+        <module>lmy-live-framework-mq-starter</module>
     </modules>
 </project>
