--- a/lmy-live-msg-provider/src/main/resources/application.yml
+++ b/lmy-live-msg-provider/src/main/resources/application.yml
@@ -33,3 +33,15 @@
 #  protocol:
 #    name: dubbo
 #    port: 9092
+#lmy:
+#  sms:
+#    ccp:
+#  rmq:
+#    consumer:
+#      nameSrv: 192.168.3.24:9876
+#      groupName: ${spring.application.name}
+#    producer:
+#      nameSrv: 192.168.3.24:9876
+#      groupName: ${spring.application.name}
+#      retryTimes: 3
+#      sendTimeout: 3000
