--- a/lmy-live-im-core-server/pom.xml
+++ b/lmy-live-im-core-server/pom.xml
@@ -14,6 +14,7 @@
         <netty-all.version>4.1.89.Final</netty-all.version>
         <lmy-live-redis-starter.version>1.0-SNAPSHOT</lmy-live-redis-starter.version>
         <lmy-live-mq-starter.version>1.0-SNAPSHOT</lmy-live-mq-starter.version>
+        <lmy-live-im-core-server-interface.version>1.0-SNAPSHOT</lmy-live-im-core-server-interface.version>
     </properties>
 
     <dependencies>
@@ -85,6 +86,11 @@
             <groupId>org.apache.rocketmq</groupId>
             <artifactId>rocketmq-client-java</artifactId>
             <version>5.0.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.idea</groupId>
+            <artifactId>lmy-live-im-core-server-interface</artifactId>
+            <version>${lmy-live-im-core-server-interface.version}</version>
         </dependency>
     </dependencies>
 </project>
