--- a/lmy-live-im-core-server/src/main/resources/application.yml
+++ b/lmy-live-im-core-server/src/main/resources/application.yml
@@ -11,6 +11,7 @@ spring:
           min-idle: 10
           max-active: 100
           max-idle: 10
+
 dubbo:
   application:
     name: ${spring.application.name}
@@ -25,6 +26,7 @@ dubbo:
     dispatcher: execution
     threads: 500
     accepts: 500
+    host: 192.168.3.26
 lmy:
   im:
     port: 8085
@@ -37,3 +39,5 @@ lmy:
       groupName: ${spring.application.name}
       retryTimes: 3
       sendTimeout: 3000
+#server:
+#  port: 8081
