--- a/lmy-live-im-core-server/src/main/resources/application.yml
+++ b/lmy-live-im-core-server/src/main/resources/application.yml
@@ -1,43 +1,41 @@
-spring:
-  application:
-    name: lmy-live-im-core-server
-  data:
-    redis:
-      port: 6379
-      host: 192.168.3.24
-      password: redis
-      lettuce:
-        pool:
-          min-idle: 10
-          max-active: 100
-          max-idle: 10
-
-dubbo:
-  application:
-    name: ${spring.application.name}
-    qos-enable: false
-  registry:
-    #docker 启动的时候，注入 host 的配置
-    address: nacos://192.168.3.24:8848?namespace=lmy-live-test&&username=lmy&&password=lmy
-  protocol:
-    name: dubbo
-    port: 9096
-    threadpool: fixed
-    dispatcher: execution
-    threads: 500
-    accepts: 500
-    host: 192.168.3.26
-lmy:
-  im:
-    port: 8085
-  rmq:
-    consumer:
-      nameSrv: 192.168.3.24:9876
-      groupName: ${spring.application.name}
-    producer:
-      nameSrv: 192.168.3.24:9876
-      groupName: ${spring.application.name}
-      retryTimes: 3
-      sendTimeout: 3000
-#server:
-#  port: 8081
+#spring:
+#  application:
+#    name: lmy-live-im-core-server
+#  data:
+#    redis:
+#      port: 6379
+#      host: 192.168.3.24
+#      password: redis
+#      lettuce:
+#        pool:
+#          min-idle: 10
+#          max-active: 100
+#          max-idle: 10
+#
+#dubbo:
+#  application:
+#    name: ${spring.application.name}
+#    qos-enable: false
+#  registry:
+#    #docker 启动的时候，注入 host 的配置
+#    address: nacos://192.168.3.24:8848?namespace=lmy-live-test&&username=lmy&&password=lmy
+#  protocol:
+#    name: dubbo
+#    port: 9096
+#    threadpool: fixed
+#    dispatcher: execution
+#    threads: 500
+#    accepts: 500
+#    host: 192.168.3.26
+#lmy:
+#  im:
+#    port: 8085
+#  rmq:
+#    consumer:
+#      nameSrv: 192.168.3.24:9876
+#      groupName: ${spring.application.name}
+#    producer:
+#      nameSrv: 192.168.3.24:9876
+#      groupName: ${spring.application.name}
+#      retryTimes: 3
+#      sendTimeout: 3000
