--- a/lmy-live-im-router-provider/src/main/resources/application.yml
+++ b/lmy-live-im-router-provider/src/main/resources/application.yml
@@ -1,6 +1,16 @@
 #spring:
 #  application:
 #    name: lmy-live-im-router-provider
+#  data:
+#    redis:
+#      port: 6379
+#      host: 192.168.3.24
+#      password: redis
+#      lettuce:
+#        pool:
+#          min-idle: 10
+#          max-active: 100
+#          max-idle: 10
 #
 #dubbo:
 #  protocol:
@@ -10,3 +20,5 @@
 #    qos-enable: false
 #  registry:
 #    address: nacos://192.168.3.24:8848?namespace=lmy-live-test&&username=lmy&&password=lmy
+#server:
+#  port: 8091
