add 7-24 用户在线检测的功能开发 code

--- a/lmy-live-im-provider/pom.xml
+++ b/lmy-live-im-provider/pom.xml
@@ -12,6 +12,7 @@
         <lmy-live-redis-starter.version>1.0-SNAPSHOT</lmy-live-redis-starter.version>
         <lmy-live-im-interface.version>1.0-SNAPSHOT</lmy-live-im-interface.version>
         <lmy-live-common-interface.version>1.0-SNAPSHOT</lmy-live-common-interface.version>
+        <lmy-live-im-core-server-interface.version>1.0-SNAPSHOT</lmy-live-im-core-server-interface.version>
     </properties>
     <dependencies>
         <dependency>
@@ -46,6 +47,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-bootstrap</artifactId>
             <version>${spring-cloud-starter-bootstrap.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.idea</groupId>
+            <artifactId>lmy-live-im-core-server-interface</artifactId>
+            <version>${lmy-live-im-core-server-interface.version}</version>
         </dependency>
     </dependencies>
 </project>
