--- a/lmy-live-api/pom.xml
+++ b/lmy-live-api/pom.xml
@@ -61,6 +61,11 @@
             <artifactId>lmy-live-framework-web-starter</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.idea</groupId>
+            <artifactId>lmy-live-living-interface</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>${project.artifactId}-docker</finalName>
