--- a/lmy-live-living-provider/src/main/resources/application.yml
+++ b/lmy-live-living-provider/src/main/resources/application.yml
@@ -1,14 +1,14 @@
 #spring:
 #  application:
-#    name: lmy-live-user-provider
+#    name: lmy-live-living-provider
 #  datasource:
-##    driver-class-name: com.mysql.cj.jdbc.Driver
-#    driver-class-name: org.apache.shardingsphere.driver.ShardingSphereDriver
-##    url: jdbc:mysql://192.168.3.24:8808/lmy_live_user?useUnicode=true&characterEncoding=utf8&allowPublicKeyRetrieval=true
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+##    driver-class-name: org.apache.shardingsphere.driver.ShardingSphereDriver
+#    url: jdbc:mysql://192.168.3.24:8808/lmy_live_living?useUnicode=true&characterEncoding=utf8&allowPublicKeyRetrieval=true
 #    username: root
 #    password: root
 ##    url: jdbc:shardingsphere:classpath:lmy-db-sharding.yaml
-#    url: jdbc:shardingsphere:nacos:192.168.3.24:8848:lmy-live-user-shardingjdbc.yaml?username=lmy&&password=lmy&&namespace=lmy-live-test
+##    url: jdbc:shardingsphere:nacos:192.168.3.24:8848:lmy-live-user-shardingjdbc.yaml?username=lmy&&password=lmy&&namespace=lmy-live-test
 #    hikari:
 #      pool-name: lmy-user-pool
 #      minimum-idle: 150
@@ -33,18 +33,6 @@
 ##        import-check:
 ##          enabled: false
 #
-#lmy:
-#  rmq:
-#    topic: user-update-cache
-#    producer:
-#      nameSrv: 192.168.3.24:9876
-#      groupName: ${spring.application.name}
-#      retryTimes: 3
-#      sendTimeout: 3000
-#    consumer:
-#      nameSrv: 192.168.3.24:9876
-#      groupName: ${spring.application.name}
-#
 #dubbo:
 #  application:
 #    name: ${spring.application.name}
@@ -54,4 +42,6 @@
 #  server: true
 #  protocol:
 #    name: dubbo
-#    port: 9091
+#    port: 9095
+#server:
+#  port: 8085
