--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
         <module>lmy-live-im-core-server-interface</module>
         <module>lmy-live-im-router-interface</module>
         <module>lmy-live-im-router-provider</module>
+        <module>lmy-live-living-interface</module>
+        <module>lmy-live-living-provider</module>
     </modules>
     <packaging>pom</packaging>
 
