--- a/lmy-live-living-interface/pom.xml
+++ b/lmy-live-living-interface/pom.xml
@@ -7,4 +7,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>lmy-live-living-interface</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>org.idea</groupId>
+            <artifactId>lmy-live-common-interface</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 </project>
