--- a/lmy-live-living-provider/pom.xml
+++ b/lmy-live-living-provider/pom.xml
@@ -70,5 +70,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.idea</groupId>
+            <artifactId>lmy-live-framework-redis-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
