--- a/lmy-live-api/pom.xml
+++ b/lmy-live-api/pom.xml
@@ -66,6 +66,12 @@
             <artifactId>lmy-live-living-interface</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.idea</groupId>
+            <artifactId>lmy-live-im-interface</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <build>
         <finalName>${project.artifactId}-docker</finalName>
