add 8-8 直播间内用户的上下线访问记录 8-9 router层在直播间重实现群聊推送（一）二

--- a/lmy-live-im-router-provider/pom.xml
+++ b/lmy-live-im-router-provider/pom.xml
@@ -60,5 +60,11 @@
             <artifactId>lmy-live-framework-redis-starter</artifactId>
             <version>${lmy-live-framework-redis-starter.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.idea</groupId>
+            <artifactId>lmy-live-living-interface</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
