add 9-5 礼物基础服务的介绍

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,8 @@
         <module>lmy-live-im-router-provider</module>
         <module>lmy-live-living-interface</module>
         <module>lmy-live-living-provider</module>
+        <module>lmy-live-gift-provider</module>
+        <module>lmy-live-gift-interface</module>
     </modules>
     <packaging>pom</packaging>
 
