add 9-5 引入redis， 减轻服务器压力， 引入rocketMQ，用户异步刷新缓存

--- a/lmy-live-gift-provider/src/main/resources/application.yml
+++ b/lmy-live-gift-provider/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 #spring:
 #  application:
-#    name: lmy-live-living-provider
+#    name: lmy-live-gift-provider
 #  datasource:
 #    driver-class-name: com.mysql.cj.jdbc.Driver
 #    #    driver-class-name: org.apache.shardingsphere.driver.ShardingSphereDriver
