--- a/lmy-live-gift-provider/pom.xml
+++ b/lmy-live-gift-provider/pom.xml
@@ -62,7 +62,16 @@
             <groupId>org.idea</groupId>
             <artifactId>lmy-live-gift-interface</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.idea</groupId>
+            <artifactId>lmy-live-framework-mq-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-client-java</artifactId>
+            <version>5.0.5</version>
         </dependency>
     </dependencies>
 </project>
