add 10-4 限流组件的实现

--- a/lmy-live-api/src/main/resources/application.yml
+++ b/lmy-live-api/src/main/resources/application.yml
@@ -11,3 +11,13 @@
 #spring:
 #  application:
 #    name: lmy-live-api
+#  data:
+#    redis:
+#      port: 6379
+#      host: 192.168.3.24
+#      password: redis
+#      lettuce:
+#        pool:
+#          min-idle: 10
+#          max-active: 100
+#          max-idle: 10
