--- a/lmy-live-framework/lmy-live-framework-web-starter/pom.xml
+++ b/lmy-live-framework/lmy-live-framework-web-starter/pom.xml
@@ -48,6 +48,11 @@
             <artifactId>spring-cloud-starter-bootstrap</artifactId>
             <version>${spring-cloud-starter-bootstrap.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.idea</groupId>
+            <artifactId>lmy-live-framework-redis-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
