add 11-6 礼物余额扣减流程讲解

--- a/lmy-live-bank-provider/pom.xml
+++ b/lmy-live-bank-provider/pom.xml
@@ -54,5 +54,10 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.idea</groupId>
+            <artifactId>lmy-live-framework-redis-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
