add 11-9 礼物特效svga的实现

--- a/lmy-live-api/src/main/resources/application.yml
+++ b/lmy-live-api/src/main/resources/application.yml
@@ -21,3 +21,13 @@
 #          min-idle: 10
 #          max-active: 100
 #          max-idle: 10
+#lmy:
+#  rmq:
+#    consumer:
+#      nameSrv: 192.168.3.24:9876
+#      groupName: ${spring.application.name}
+#    producer:
+#      nameSrv: 192.168.3.24:9876
+#      groupName: ${spring.application.name}
+#      retryTimes: 3
+#      sendTimeout: 3000
