add 11-16 -1 支付回调流程完善（上）

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <module>lmy-live-gift-interface</module>
         <module>lmy-live-bank-interface</module>
         <module>lmy-live-bank-provider</module>
+        <module>lmy-live-bank-api</module>
     </modules>
     <packaging>pom</packaging>
 
