add 11-17 -2 支付回调流程完善（上） 11-18 支付回调流程完善（下）

--- a/lmy-live-bank-api/src/main/resources/application.yml
+++ b/lmy-live-bank-api/src/main/resources/application.yml
@@ -6,7 +6,7 @@
 #    address: nacos://192.168.3.24:8848?namespace=lmy-live-test&&username=lmy&&password=lmy
 #server:
 #  servlet:
-#    context-path: /live/bank/api
+#    context-path: /live/api
 #  port: 8071
 #spring:
 #  application:
