--- a/lmy-live-bank-provider/src/main/resources/application.yml
+++ b/lmy-live-bank-provider/src/main/resources/application.yml
@@ -36,3 +36,14 @@
 #    port: 9070
 #server:
 #  port: 8070
+#
+#lmy:
+#  rmq:
+#    consumer:
+#      nameSrv: 192.168.3.24:9876
+#      groupName: ${spring.application.name}
+#    producer:
+#      nameSrv: 192.168.3.24:9876
+#      groupName: ${spring.application.name}
+#      retryTimes: 3
+#      sendTimeout: 3000
