--- a/lmy-live-api/pom.xml
+++ b/lmy-live-api/pom.xml
@@ -37,6 +37,11 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>2.6.2</version>
+        </dependency>
+        <dependency>
             <groupId>org.idea</groupId>
             <artifactId>lmy-live-user-interface</artifactId>
             <version>1.0-SNAPSHOT</version>
